Mention that focus is not on frameworks

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@ this for anything to serious.
    when an element is removed.
 </p>
 </li>
-<li><p>Not focus on tools like linters, prettifiers, transpilers and bundlers.
+<li><p>Not focus on tools like frameworks, linters, prettifiers, transpilers and
+   bundlers.
 </p>
 </li>
 </ol>
@@ -145,9 +146,6 @@ then the code, followed by styling.
 
 </div>
 <a name="1:4"><div class="section"><h4>4. Vanilla Javascript</h4></a>
-<p>No need for frameworks, bundlers and package management for a project as simple
-as this.
-</p>
 <p>We will use an <a href="https://en.wikipedia.org/wiki/Immediately-invoked_function_expression">IIFE</a>. This allows one to define variables without changing
 any global variables/objects.
 </p>
