--- a/index.html
+++ b/index.html
@@ -287,11 +287,11 @@ function state(initialState) {
 
 </div>
 <a name="1:8"><div class="section"><h4>8. Testing Our JS code</h4></a>
-<p>I have chosen a tool I find very useful which is Perl's [prove][2]. It is
+<p>I have chosen a tool I find very useful which is Perl's <a href="https://perldoc.perl.org/prove.html">prove</a>. It is
 a test harness that will run all <code>./t/*.t</code> files. It expects these scripts to
-output [TAP][3].
+output <a href="http://testanything.org/">TAP</a>.
 </p>
-<p>To make this possible we need a JS library that supports tap. NPM's [tape][1]
+<p>To make this possible we need a JS library that supports tap. NPM's <a href="https://www.npmjs.com/package/tape">tape</a>
 should do the job.
 </p>
 <p>We create the <code>package.json</code> and register tape as one of the dev dependencies.
